init - basic canvas frame setting

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tetris made by Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/joowining/TetrisTypeScript#readme",
   "dependencies": {
+    "lite-server": "^2.6.1",
     "typescript": "^5.3.3"
   }
 }
